--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-# To execute this docker-compose yml file use `docker-compose -f docker-compose-v2.yml up`
-# Add the `-d` flag at the end for detached execution
-# To stop the execution, hit Ctrl+C, and then `docker-compose -f docker-compose-v2.yml down`
-version: '2'
+version: "3"
 services:
   chrome:
     image: selenium/node-chrome:4.3.0-20220726
@@ -12,9 +9,8 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=2
-    ports:
-      - "6900:5900"
+      - SE_NODE_SESSION_TIMEOUT=30
+      - SE_SESSION_RETRY_INTERVAL=1
 
   edge:
     image: selenium/node-edge:4.3.0-20220726
@@ -25,9 +21,7 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=1
-    ports:
-      - "6901:5900"
+      - SE_NODE_MAX_SESSIONS=2
 
   firefox:
     image: selenium/node-firefox:4.3.0-20220726
@@ -38,11 +32,10 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    ports:
-      - "6902:5900"
 
   selenium-hub:
     image: selenium/hub:4.3.0-20220726
+    container_name: selenium-hub
     ports:
       - "4442:4442"
       - "4443:4443"
