Update tests/docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: "3"
 services:
+  selenium-hub:
+    image: selenium/hub:4.3.0-20220726
+    container_name: selenium-hub
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
+    environment:
+      - SE_NODE_SESSION_TIMEOUT=30
+      - SE_SESSION_RETRY_INTERVAL=1
+
   chrome:
     image: selenium/node-chrome:4.3.0-20220726
     shm_size: 2gb
@@ -9,9 +20,18 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_SESSION_TIMEOUT=30
-      - SE_SESSION_RETRY_INTERVAL=1
-
+      - SE_NODE_MAX_SESSIONS=1
+  firefox:
+    image: selenium/node-firefox:4.3.0-20220726
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSIONS=1
+      
   edge:
     image: selenium/node-edge:4.3.0-20220726
     shm_size: 2gb
@@ -23,28 +43,9 @@ services:
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
       - SE_NODE_MAX_SESSIONS=1
 
-  firefox:
-    image: selenium/node-firefox:4.3.0-20220726
-    shm_size: 2gb
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-
-  selenium-hub:
-    image: selenium/hub:4.3.0-20220726
-    container_name: selenium-hub
-    ports:
-      - "4442:4442"
-      - "4443:4443"
-      - "4444:4444"
-
   android-node:
     image: selenium/node-base:4.3.0-20220726
     shm_size: 2gb
-    # Source for volume will be the path on your machine to the config.toml file. Destination stays the same.
     volumes:
       - "C:/Users/logan.ferrera/Desktop/Grid Docker Test/config.toml:/opt/bin/config.toml"
     depends_on:
